Updated esper images

--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -19,19 +19,28 @@
             android:id="@+id/nav_exploration"
             android:icon="@drawable/ic_menu_manage"
             android:title="Exploration" />
+
+        <item
+            android:id="@+id/nav_colo"
+            android:icon="@drawable/ic_menu_manage"
+            android:title="Colosseum" />
+        <item
+            android:id="@+id/nav_earthkeys"
+            android:icon="@drawable/ic_menu_manage"
+            android:title="Earth Keys" />
     </group>
 
-    <item android:title="Communicate">
-        <menu>
-            <item
-                android:id="@+id/nav_share"
-                android:icon="@drawable/ic_menu_share"
-                android:title="Share" />
-            <item
-                android:id="@+id/nav_send"
-                android:icon="@drawable/ic_menu_send"
-                android:title="Send" />
-        </menu>
-    </item>
+    <!--<item android:title="Communicate">-->
+    <!--<menu>-->
+    <!--<item-->
+    <!--android:id="@+id/nav_share"-->
+    <!--android:icon="@drawable/ic_menu_share"-->
+    <!--android:title="Share" />-->
+    <!--<item-->
+    <!--android:id="@+id/nav_send"-->
+    <!--android:icon="@drawable/ic_menu_send"-->
+    <!--android:title="Send" />-->
+    <!--</menu>-->
+    <!--</item>-->
 
 </menu>
